<resources>
    <string name="app_name">Crunch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="appitizer">Appitizer</string>
    <string name="dessert">Dessert</string>
    <string name="salad">Salad</string>
</resources>